[gd_scene load_steps=4 format=2]

[ext_resource path="res://mini-game/scenes/decor/foreground.gd" type="Script" id=1]
[ext_resource path="res://mini-game/scenes/decor/ForegroundSprite.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 958.398, 78.6175 )

[node name="foreground" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 960, 1080 )
shape = SubResource( 1 )

[node name="ForegroundSprite" parent="." instance=ExtResource( 2 )]

[connection signal="viewport_entered" from="ForegroundSprite" to="." method="_on_ForegroundSprite_viewport_entered"]
[connection signal="viewport_exited" from="ForegroundSprite" to="." method="_on_ForegroundSprite_viewport_exited"]
